--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,6 +130,7 @@ img {
 }
 .header-contacts {
   display: flex;
+  align-items: center;
   padding-top: 10px;
   padding-bottom: 10px;
   font-weight: 500;
@@ -151,6 +152,9 @@ img {
 
 /*----------HERO-----------*/
 .hero {
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--hero-bcg-color);
   padding: 200px 0;
   background-image: linear-gradient(
@@ -201,7 +205,10 @@ img {
   padding-bottom: 0;
 }
 .features-overtitle {
-  padding: 25px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
   margin-bottom: 30px;
   background-color: var(--third-bcg-color);
   border-radius: 4px;
@@ -261,7 +268,6 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 30px;
-  margin-bottom: 16px;
 }
 
 .team-subtitle {
@@ -276,6 +282,7 @@ img {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  margin-bottom: 16px;
   color: var(--text-color);
 }
 .team-social-list {
@@ -315,10 +322,11 @@ img {
 }
 
 .clients-link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 170px;
   height: 92px;
-  padding: 16px 32px;
   border: 1px solid var(--link-color);
   border-radius: 4px;
 }
@@ -341,6 +349,10 @@ img {
   background-color: var(--sec-bcg-color);
   padding-top: 60px;
   padding-bottom: 60px;
+}
+.conteiner.box {
+  display: flex;
+  align-items: baseline;
 }
 .basement-block {
   margin-right: 70px;
@@ -385,10 +397,6 @@ img {
 .basement-contacts:hover,
 .basement-contacts:focus {
   color: var(--accent-color);
-}
-.basement-social-block {
-  padding-top: 12px;
-  padding-bottom: 40px;
 }
 
 .basement-social-title {
@@ -486,8 +494,11 @@ img {
   letter-spacing: 0.03em;
   color: var(--text-color);
 }
-.works-item:hover,
-.works-item:focus {
+.works-item-link {
+  display: block;
+}
+.works-item-link:hover,
+.works-item-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
